<resources>
    <string name="app_name">NutriTrack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_nutritrack">Welcome To NutriTrack!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="tracking">Tracking</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="log_meal">Log Meal</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="total_0_kcal">Total: 0 kcal</string>
    <string name="remaining_2000_kcal">Remaining: 2000 kcal</string>
    <string name="logged_meals">Logged Meals</string>
    <string name="you_haven_t_reached_your_calorie_goal_for_today_yet_eat_more_and_remember_to_log_your_meals">You haven\'t reached your calorie goal for today yet, eat more and remember to log your meals!</string>
    <string name="you_ve_reached_your_calorie_goal_for_today_stop_eating">You\'ve reached your calorie goal for today, stop eating!!!</string>
    <string name="please_set_up_your_profile_first">Please set up your profile first.</string>
    <string name="clear">Clear</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="_2000">2000</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string-array name="activity_level">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>