<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/meal_input"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_name" />

        <Button
            android:id="@+id/log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_meal" />
        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_calories"
        android:text="@string/total_0_kcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/remaining_calories"
        android:text="@string/remaining_2000_kcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/logged_meals"
        android:text="@string/logged_meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/meal_list"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:gravity="center"/>

</LinearLayout>