<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/txvAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/txvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="72dp"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/txvHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="85dp"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/txvWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="88dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/txvActvityLevel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvActvityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:text="@string/activity_level"
        app:layout_constraintBottom_toTopOf="@+id/txvGoalLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/txvName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/txvAge" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_height"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/txvHeight"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_weight"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spnActivityLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/txvWeight" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="36dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spnActivityLevel"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginBottom="124dp"
        android:entries="@array/activity_level"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/txvActvityLevel" />

    <TextView
        android:id="@+id/txvGoalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="140dp"
        android:text="@string/calorie_goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/txvGoalLabel"
        app:layout_constraintTop_toBottomOf="@+id/spnActivityLevel"
        app:layout_constraintVertical_bias="0.007" />
</androidx.constraintlayout.widget.ConstraintLayout>